# RLM-kernel-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test_llm_codegen.py  test_llm_picks.py
config/: b200_spec.yaml  search_config.yaml
eval/: __init__.py  benchmark.py  correctness.py  flashinfer_ref.py  hack_detector.py  runtime_checks.py  waferbench_format.py
kernels/common/: b200_intrinsics.cuh  nvfp4_utils.cuh
kernels/reference/: add_rmsnorm.cu  nvfp4_quantize.cu  silu_mul.cu
profiler/: __init__.py  bottleneck_classifier.py  hybrid_profiler.py  kernel_profiler.py  metrics.py  ncu_runner.py  roofline.py  validate_hybrid.py
rlm/: __init__.py  blueprints.py  cuda_docs.py  engine.py  environment.py  rag_retriever.py  reflector.py  root_prompts.py  sub_prompts.py
rlm/knowledge_base/: cache_streaming_stores.md  hardware_fp4_intrinsics.md  multi_row_processing.md  shape_specialized_unroll.md
search/: __init__.py  beam_search.py  combiner.py  diversity_selector.py  strategy_bank.py  world_model.py
